Optimize front APIs for miniapp and APP
fixed product list

fixed perpage for category and product

fixed pdp data

fixed pdp data

fixed product detail api

add sku image

fixed sku

Fixed for miniapp.

fixed password

fixed social

fixed social

fixed customer relation

update cart

update carts

select and unselect all

fixed checkout

fixed checkout data

fixed cart and checkout

fixed api

fixed setting api

fixed checkout

fixed order filters

pay order by order number

fixed order pay

fixed order pay

fixed pay

fixed order for bank transfer

fixed wechat pay

fixed fields

fixed customer social

fixed callbacks

fixed address detail

update account me

Update profile and password

add hardcode for home data

fixed order api

fixed order api

fixed home data

add icons

fixed home page.

fixed banner 4

fixed favorites

use add password api

fixed filters

fixed product filters

fixed product filters

filter by attributes.

code format

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-curl": "*",
+        "ext-openssl": "*",
         "ext-pdo": "*",
+        "ext-simplexml": "*",
         "intervention/image": "^3.5",
         "laravel/framework": "^11.0",
         "laravel/octane": "^2.5",
@@ -16,6 +19,7 @@
         "nelexa/zip": "^4.0",
         "spatie/laravel-permission": "^6.7",
         "tormjens/eventy": "^0.9.3",
+        "w7corp/easywechat": "^6.7",
         "wikimedia/composer-merge-plugin": "^2.1"
     },
     "require-dev": {
